cleanup dev dependencies

--- a/app.json
+++ b/app.json
@@ -5,8 +5,7 @@
         "bot",
         "Facebook Messenger",
         "Messenger",
-        "Teneo",
-        "CAI"
+        "Teneo"
     ],
     "repository": "https://github.com/artificialsolutions/tie-api-example-facebook-messenger/",
     "env": {
