--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "dependencies": {
     "@artificialsolutions/tie-api-client": "^1.3.1",
     "body-parser": "^1.18.3",
+    "dotenv": "^8.1.0",
     "express": "^4.16.4",
+    "localtunnel": "^2.0.0",
+    "ngrok": "^3.2.5",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5"
   }
